Feat: exercicios tarde swagger middleware
